[package]
name = "ataque"
version = "0.1.0"
edition = "2024"

[dependencies]

eframe ="0.27"
chrono = "0.4.41"
num_cpus = "1.13"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }

rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.31"
